--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -7,95 +7,14 @@
 	<!-- Main content: art, weather, low and high temp -->
 	<include layout="@layout/grid_detail_today"
 			 android:layout_width="match_parent"
-			 android:layout_height="0dp"
+			 android:layout_height="wrap_content"
 			 android:layout_weight="3"/>
 
 	<!-- Humidity, wind, pressure -->
-	<LinearLayout
-		android:id="@+id/detail_additional_pane"
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_weight="2"
-		android:background="@color/detail_accent_pane_background"
-		android:orientation="vertical"
-		android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
-		android:paddingEnd="@dimen/detail_horizontal_padding"
-		android:paddingLeft="@dimen/detail_horizontal_padding"
-		android:paddingRight="@dimen/detail_horizontal_padding"
-		android:paddingStart="@dimen/detail_horizontal_padding"
-		android:paddingTop="@dimen/abc_list_item_padding_horizontal_material">
-
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:orientation="horizontal">
-
-			<TextView
-				android:id="@+id/detail_humidity_label_text_view"
-				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:gravity="center_vertical|left"
-				android:text="@string/humidity"/>
-
-			<TextView
-				android:id="@+id/detail_humidity_textview"
-				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:gravity="center_vertical|left"
-				android:text="48%"/>
-
-		</LinearLayout>
-
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:orientation="horizontal">
-
-			<TextView
-				android:id="@+id/detail_wind_label_textview"
-				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:gravity="center_vertical|left"
-				android:text="@string/wind"/>
-
-			<TextView
-				android:id="@+id/detail_wind_textview"
-				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:gravity="center_vertical|left"
-				android:text="6 km/h NW"/>
-		</LinearLayout>
-
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:orientation="horizontal">
-			<TextView
-				android:id="@+id/detail_pressure_label_textview"
-				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:gravity="center_vertical|left"
-				android:layout_weight="1"
-				android:text="@string/pressure"/>
-			<TextView
-				android:id="@+id/detail_pressure_textview"
-				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:gravity="center_vertical|left"
-				android:layout_weight="1"
-				android:text="1014 hPa"/>
-		</LinearLayout>
-	</LinearLayout>
+	<include layout="@layout/grid_detail_humidity"
+			 android:layout_width="match_parent"
+			 android:layout_height="wrap_content"
+			 android:layout_weight="2"/>
 
 	<!-- for transition effect from one image to another -->
 	<ImageSwitcher
