--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -1,103 +1,28 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-			xmlns:tools="http://schemas.android.com/tools"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:padding="@dimen/activity_vertical_margin"
-			tools:context=".view.DetailActivity">
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:layoutDirection="ltr"
+	android:orientation="horizontal">
 
-	<LinearLayout
-		android:layout_width="match_parent"
+	<!-- Main content: art, weather, low and high temp -->
+	<include layout="@layout/grid_detail_today"
+			 android:layout_width="0dp"
+			 android:layout_height="match_parent"
+			 android:layout_weight="3"/>
+
+	<!-- Humidity, wind, pressure -->
+	<include layout="@layout/grid_detail_humidity"
+			 android:layout_width="0dp"
+			 android:layout_height="match_parent"
+			 android:layout_weight="2"/>
+
+	<!-- for transition effect from one image to another -->
+	<ImageSwitcher
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:orientation="horizontal"
-		android:layoutDirection="ltr">
+		android:id="@+id/imageSwitcher"
+		android:layout_gravity="right" />
 
-		<LinearLayout android:layout_width="wrap_content"
-					  android:layout_height="wrap_content"
-					  android:orientation="vertical"
-					  android:layout_weight="1">
-			<!-- Header: Day, Date -->
-			<TextView
-				android:id="@+id/detail_day_textview"
-				style="@style/SansSerifCondensed.TC_TS_Primary"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="Tomorrow"/>
-			<TextView
-				android:id="@+id/detail_date_textview"
-				style="@style/SansSerifCondensed.TC_Secondary"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="June 24"/>
-		</LinearLayout>
+</LinearLayout>
 
-		<LinearLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginLeft="@dimen/activity_horizontal_margin"
-			android:layout_weight="2"
-			android:orientation="vertical"
-			android:layout_gravity="top">
-
-			<!-- Maz, Min, Humidity, wind, pressure -->
-			<TextView
-				android:id="@+id/detail_high_textview"
-				style="@style/SansSerifLight.TC_Primary.Max"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="21°"/>
-			<TextView
-				android:id="@+id/detail_low_textview"
-				style="@style/SansSerifLight.TC_Secondary.Min"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="11°"/>
-
-			<TextView
-				android:id="@+id/detail_humidity_textview"
-				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="Humidity: 48%"/>
-
-			<TextView
-				android:id="@+id/detail_wind_textview"
-				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="Wind: 6 km/h NW"/>
-
-			<TextView
-				android:id="@+id/detail_pressure_textview"
-				style="@style/SansSerifLight.TC_Tertiary_TS_Primary"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="Pressure: 1014 hPa"/>
-
-		</LinearLayout>
-
-		<LinearLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:gravity="center_horizontal"
-			android:orientation="vertical"
-			>
-
-			<!-- icon, forecast -->
-			<ImageView
-				android:id="@+id/detail_icon"
-				android:adjustViewBounds="true"
-				android:layout_width="@dimen/icon_details_size"
-				android:layout_height="@dimen/icon_details_size"
-				android:src="@mipmap/art_clear"/>
-			<TextView
-				android:id="@+id/detail_forecast_textview"
-				style="@style/SansSerifCondensed.TC_Secondary.TS_Forecast"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="Clear"/>
-		</LinearLayout>
-
-
-	</LinearLayout>
-
-</ScrollView>
