--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -1,59 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:minHeight="?android:attr/listPreferredItemHeight"
-			  android:orientation="horizontal"
-			  android:gravity="center_vertical"
-			  android:paddingLeft="@dimen/today_item_left_margin"
-			  android:background="@drawable/forecast_today_touch_selector">
+<FrameLayout
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:background="@drawable/forecast_today_touch_selector"
+	android:elevation="4dp">
 
-	<LinearLayout android:layout_width="wrap_content"
-				  android:layout_height="wrap_content"
-				  android:layout_weight="1"
-				  android:gravity="left"
-				  android:orientation="vertical">
+	<android.support.v7.widget.GridLayout android:layout_width="match_parent"
+										  android:layout_height="match_parent"
+										  android:background="@color/white"
+										  app:columnCount="2">
 
-		<TextView android:id="@+id/list_item_date_textview"
-				  style="@style/SansSerifCondensed.TC_White.TS_Primary"
-				  android:layout_width="wrap_content"
-				  android:layout_height="wrap_content"
-				  android:text="Today, June 24"/>
+		<android.support.v7.widget.Space app:layout_columnSpan="2"
+										 app:layout_columnWeight="1"
+										 app:layout_rowWeight="1"/>
+		<!-- Header: Day, Date -->
+		<TextView
+			android:id="@+id/list_item_date_textview"
+			style="@style/SansSerifCondensed.TC_TS_Primary"
+			android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+			android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+			android:gravity="center_horizontal"
+			android:textSize="@dimen/ts_details_today_header"
+			app:layout_columnSpan="2"
+			app:layout_columnWeight="1"
+			app:layout_gravity="fill_horizontal"
+			tools:text="Today, April 03"/>
 
-		<TextView android:id="@+id/list_item_high_textview"
-				  style="@style/SansSerifLight.TC_White.Max"
-				  android:layout_width="wrap_content"
-				  android:layout_height="wrap_content"
-				  android:text="81°"/>
+		<!-- Main content: -->
+		<!-- 1st row - art and high temp-->
+		<ImageView
+			android:id="@+id/list_item_icon"
+			android:layout_width="0dp"
+			android:adjustViewBounds="true"
+			android:maxHeight="@dimen/icon_todayitem_size"
+			android:maxWidth="@dimen/icon_todayitem_size"
+			app:layout_columnWeight="1"
+			app:layout_gravity="fill_horizontal"
+			tools:src="@mipmap/art_clouds"/>
 
-		<TextView android:id="@+id/list_item_low_textview"
-				  style="@style/SansSerifLight.TC_White.Min"
-				  android:layout_width="wrap_content"
-				  android:layout_height="wrap_content"
-				  android:text="30°"/>
-	</LinearLayout>
+		<TextView
+			android:id="@+id/list_item_high_textview"
+			style="@style/SansSerifLight.TC_Primary.Max"
+			android:layout_width="0dp"
+			android:gravity="center_horizontal"
+			app:layout_columnWeight="1"
+			app:layout_gravity="fill_horizontal"
+			tools:text="19"/>
 
-	<LinearLayout android:layout_height="wrap_content"
-				  android:layout_width="0dp"
-				  android:layout_weight="5"
-				  android:layout_marginRight="@dimen/activity_horizontal_margin"
-				  android:layout_marginEnd="@dimen/activity_horizontal_margin"
-				  android:orientation="vertical"
-				  android:gravity="center_horizontal|bottom">
+		<!-- 2nd row - weather and low temp -->
+		<TextView
+			android:id="@+id/list_item_forecast_textview"
+			style="@style/SansSerifCondensed.TC_Secondary.TS_Forecast"
+			android:layout_width="0dp"
+			android:gravity="center_horizontal"
+			app:layout_columnWeight="1"
+			tools:text="Rainy"/>
 
-		<ImageView android:id="@+id/list_item_icon"
-				   android:adjustViewBounds="true"
-				   android:layout_gravity="center_horizontal"
-				   android:layout_width="@dimen/icon_todayitem_size"
-				   android:layout_height="@dimen/icon_todayitem_size"
-				   android:src="@mipmap/art_clear"/>
+		<TextView
+			android:id="@+id/list_item_low_textview"
+			style="@style/SansSerifLight.TC_Secondary.Min"
+			android:layout_width="0dp"
+			android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+			android:gravity="center_horizontal"
+			app:layout_columnWeight="1"
+			tools:text="10"/>
 
-		<TextView android:id="@+id/list_item_forecast_textview"
-				  style="@style/SansSerifCondensed.TC_White.TS_Primary"
-				  android:layout_width="wrap_content"
-				  android:layout_height="wrap_content"
-				  android:layout_gravity="center_horizontal"
-				  android:text="Clear"/>
-	</LinearLayout>
+		<android.support.v7.widget.Space
+			app:layout_columnSpan="2"
+			app:layout_columnWeight="1"
+			app:layout_rowWeight="1"/>
 
-</LinearLayout>
+	</android.support.v7.widget.GridLayout>
+
+</FrameLayout>
+
+
