--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -13,7 +13,7 @@
 	<FrameLayout android:layout_width="@dimen/today_item_left_margin"
 				 android:layout_height="wrap_content">
 
-		<ImageView android:id="@+id/list_item_icon"
+		<ImageView android:id="@+id/detail_icon"
 				   android:adjustViewBounds="true"
 				   android:layout_width="@dimen/icon_listitem_size"
 				   android:layout_height="@dimen/icon_listitem_size"
@@ -26,13 +26,13 @@
 				  android:layout_weight="7"
 				  android:orientation="vertical">
 
-		<TextView android:id="@+id/list_item_date_textview"
+		<TextView android:id="@+id/detail_date_day_textview"
 				  style="@style/SansSerifCondensed.TC_TS_Primary"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:text="Tomorrow"/>
 
-		<TextView android:id="@+id/list_item_forecast_textview"
+		<TextView android:id="@+id/detail_forecast_textview"
 				  style="@style/SansSerifCondensed.TC_TS_Secondary"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
@@ -46,14 +46,14 @@
 				  android:layout_gravity="center"
 				  android:orientation="vertical">
 
-		<TextView android:id="@+id/list_item_high_textview"
+		<TextView android:id="@+id/detail_high_textview"
 				  style="@style/SansSerifCondensed.TC_TS_Primary"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:layout_gravity="center"
 				  android:text="81°"/>
 
-		<TextView android:id="@+id/list_item_low_textview"
+		<TextView android:id="@+id/detail_low_textview"
 				  style="@style/SansSerifCondensed.TC_TS_Secondary"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
