--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -1,79 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:background="@drawable/forecast_today_touch_selector"
 	android:elevation="4dp">
 
-	<android.support.v7.widget.GridLayout android:layout_width="match_parent"
-										  android:layout_height="match_parent"
-										  android:background="@color/white"
-										  app:columnCount="2">
-
-		<android.support.v7.widget.Space app:layout_columnSpan="2"
-										 app:layout_columnWeight="1"
-										 app:layout_rowWeight="1"/>
-		<!-- Header: Day, Date -->
-		<TextView
-			android:id="@+id/list_item_date_textview"
-			style="@style/SansSerifCondensed.TC_TS_Primary"
-			android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
-			android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-			android:gravity="center_horizontal"
-			android:textSize="@dimen/ts_details_today_header"
-			app:layout_columnSpan="2"
-			app:layout_columnWeight="1"
-			app:layout_gravity="fill_horizontal"
-			tools:text="Today, April 03"/>
-
-		<!-- Main content: -->
-		<!-- 1st row - art and high temp-->
-		<ImageView
-			android:id="@+id/list_item_icon"
-			android:layout_width="0dp"
-			android:adjustViewBounds="true"
-			android:maxHeight="@dimen/icon_todayitem_size"
-			android:maxWidth="@dimen/icon_todayitem_size"
-			app:layout_columnWeight="1"
-			app:layout_gravity="fill_horizontal"
-			tools:src="@mipmap/art_clouds"/>
-
-		<TextView
-			android:id="@+id/list_item_high_textview"
-			style="@style/SansSerifLight.TC_Primary.Max"
-			android:layout_width="0dp"
-			android:gravity="center_horizontal"
-			app:layout_columnWeight="1"
-			app:layout_gravity="fill_horizontal"
-			tools:text="19"/>
-
-		<!-- 2nd row - weather and low temp -->
-		<TextView
-			android:id="@+id/list_item_forecast_textview"
-			style="@style/SansSerifCondensed.TC_Secondary.TS_Forecast"
-			android:layout_width="0dp"
-			android:gravity="center_horizontal"
-			app:layout_columnWeight="1"
-			tools:text="Rainy"/>
-
-		<TextView
-			android:id="@+id/list_item_low_textview"
-			style="@style/SansSerifLight.TC_Secondary.Min"
-			android:layout_width="0dp"
-			android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
-			android:gravity="center_horizontal"
-			app:layout_columnWeight="1"
-			tools:text="10"/>
-
-		<android.support.v7.widget.Space
-			app:layout_columnSpan="2"
-			app:layout_columnWeight="1"
-			app:layout_rowWeight="1"/>
-
-	</android.support.v7.widget.GridLayout>
+	<include layout="@layout/grid_detail_today"/>
 
 </FrameLayout>
 
