--- a/app/src/main/res/layout-sw600dp-land-v21/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land-v21/activity_main.xml
@@ -1,49 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  xmlns:app="http://schemas.android.com/apk/res-auto"
-			  xmlns:tools="http://schemas.android.com/tools"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:baselineAligned="false"
-			  android:divider="?android:attr/dividerHorizontal"
-			  android:orientation="vertical"
-			  tools:context="com.hally.sunshine.view.MainForecastActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				xmlns:app="http://schemas.android.com/apk/res-auto"
+				xmlns:tools="http://schemas.android.com/tools"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:baselineAligned="false"
+				android:divider="?android:attr/dividerHorizontal"
+				android:orientation="vertical"
+				tools:context="com.hally.sunshine.view.MainForecastActivity">
 
-	<!-- This layout is a two-pane layout for the Items master/detail flow. -->
 	<android.support.v7.widget.Toolbar
 		android:id="@+id/toolbar"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:elevation="@dimen/appbar_elevation"
 		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
 		app:theme="@style/SunshineToolBar">
 
 		<TextView
+			style="@style/TitleActionBar"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="@string/app_name"
+			android:layout_gravity="left"
+			android:layout_marginLeft="@dimen/icon_listitem_size"
+			android:layout_marginStart="@dimen/icon_listitem_size"
+			android:layout_marginTop="?attr/actionBarSize"
 			android:gravity="center_vertical"
-			android:layout_gravity="center"
-			style="@style/TitleActionBar"/>
+			android:text="@string/app_name"/>
 	</android.support.v7.widget.Toolbar>
 
+	<!-- A static fragment -->
+	<fragment android:id="@+id/fragment_main"
+			  android:name="com.hally.sunshine.view.MainForecastFragment"
+			  android:layout_width="@dimen/list_content_lands_width"
+			  android:layout_height="match_parent"
+			  android:layout_alignParentLeft="true"
+			  android:layout_alignParentStart="true"
+			  android:layout_below="@id/toolbar"
+			  tools:layout="@android:layout/list_content"/>
 
-	<LinearLayout android:layout_width="match_parent"
-				  android:layout_height="match_parent"
-				  android:orientation="horizontal">
-
-		<!-- A static fragment -->
-		<fragment android:id="@+id/fragment_main"
-				  android:name="com.hally.sunshine.view.MainForecastFragment"
-				  android:layout_width="0dp"
-				  android:layout_height="match_parent"
-				  android:layout_weight="2"
-				  tools:layout="@android:layout/list_content"/>
-
-		<!-- We will use a dynamic fragment in container since for vertical layout we do not need
-		 details from the right side-->
-		<FrameLayout android:id="@+id/detail_container"
-					 android:layout_width="0dp"
-					 android:layout_height="match_parent"
-					 android:layout_weight="3"/>
-	</LinearLayout>
-</LinearLayout>
+	<!-- We will use a dynamic fragment in container since for vertical layout we do not need
+	 details from the right side-->
+	<FrameLayout android:id="@+id/detail_container"
+				 android:layout_width="match_parent"
+				 android:layout_height="match_parent"
+				 android:layout_marginLeft="@dimen/list_content_lands_width"
+				 android:layout_marginStart="@dimen/list_content_lands_width"
+				 android:layout_alignParentEnd="true"
+				 android:layout_alignParentRight="true"
+				 android:layout_marginTop="?attr/actionBarSize"
+				 android:elevation="@dimen/appbar_elevation"
+				 android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
+				 android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
+				 android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"/>
+</RelativeLayout>
