--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,9 @@
 	<dimen name="detail_horizontal_padding">32dp</dimen>
 	<dimen name="forecast_text_width">49dp</dimen>
 	<dimen name="forecast_temperature_space">8dp</dimen>
+	<!-- Needed if we aren't including the Material Design Library -->
+	<dimen name="appbar_elevation">4dp</dimen>
+	<dimen name="list_content_lands_width">350dp</dimen>
 
 
 	<!-- Text Sizes - We are using DP here rather than SP because these are already large
