--- a/app/src/main/res/layout-sw600dp-land-v21/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land-v21/activity_main.xml
@@ -17,16 +17,18 @@
 		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
 		app:theme="@style/SunshineToolBar">
 
-		<TextView
-			style="@style/TitleActionBar"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="left"
-			android:layout_marginLeft="@dimen/icon_listitem_size"
-			android:layout_marginStart="@dimen/icon_listitem_size"
-			android:layout_marginTop="?attr/actionBarSize"
-			android:gravity="center_vertical"
-			android:text="@string/app_name"/>
+			<TextView
+				style="@style/TitleActionBar"
+				android:layout_width="wrap_content"
+				android:layout_height="?attr/actionBarSize"
+				android:layout_gravity="left"
+				android:layout_marginLeft="@dimen/icon_listitem_size"
+				android:layout_marginStart="@dimen/icon_listitem_size"
+				android:layout_marginTop="?attr/actionBarSize"
+				android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+				android:paddingStart="@dimen/abc_list_item_padding_horizontal_material"
+				android:gravity="center_vertical"
+				android:text="@string/app_name"/>
 	</android.support.v7.widget.Toolbar>
 
 	<!-- A static fragment -->
@@ -44,10 +46,10 @@
 	<FrameLayout android:id="@+id/detail_container"
 				 android:layout_width="match_parent"
 				 android:layout_height="match_parent"
-				 android:layout_marginLeft="@dimen/list_content_lands_width"
-				 android:layout_marginStart="@dimen/list_content_lands_width"
 				 android:layout_alignParentEnd="true"
 				 android:layout_alignParentRight="true"
+				 android:layout_marginLeft="@dimen/list_content_lands_width"
+				 android:layout_marginStart="@dimen/list_content_lands_width"
 				 android:layout_marginTop="?attr/actionBarSize"
 				 android:elevation="@dimen/appbar_elevation"
 				 android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
