--- a/app/src/main/res/layout-sw600dp-land-v21/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land-v21/activity_main.xml
@@ -17,6 +17,13 @@
 		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
 		app:theme="@style/SunshineToolBar">
 
+		<!-- align the title to the list_content's day text -->
+		<FrameLayout android:layout_width="wrap_content"
+					 android:layout_height="wrap_content"
+					 android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
+					 android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+					 android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+					 android:paddingStart="@dimen/abc_list_item_padding_horizontal_material">
 			<TextView
 				style="@style/TitleActionBar"
 				android:layout_width="wrap_content"
@@ -25,10 +32,9 @@
 				android:layout_marginLeft="@dimen/icon_listitem_size"
 				android:layout_marginStart="@dimen/icon_listitem_size"
 				android:layout_marginTop="?attr/actionBarSize"
-				android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
-				android:paddingStart="@dimen/abc_list_item_padding_horizontal_material"
 				android:gravity="center_vertical"
 				android:text="@string/app_name"/>
+		</FrameLayout>
 	</android.support.v7.widget.Toolbar>
 
 	<!-- A static fragment -->
