--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,7 @@
 		 font sizes, and going larger will cause lots of view problems.  This is only for
 		 the large forecast numbers in the forecast list -->
 	<dimen name="forecast_text_size">32dp</dimen>
+
+	<!-- The amount we want the details view to overlap the app bar -->
+	<dimen name="details_app_bar_overlap">24dp</dimen>
 </resources>
