--- a/app/src/main/res/layout-sw600dp-v21/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-v21/activity_main.xml
@@ -15,32 +15,29 @@
 		android:elevation="0dp"
 		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
 		app:theme="@style/SunshineToolBar">
-	</android.support.v7.widget.Toolbar>
 
-	<TextView android:id="@+id/txt_title"
-			  style="@style/TitleActionBar"
-			  android:background="@color/primary"
-			  android:layout_width="match_parent"
-			  android:layout_height="?attr/actionBarSize"
-			  android:layout_gravity="center"
-			  android:layout_marginTop="?attr/actionBarSize"
-			  android:gravity="center_vertical"
-			  android:textAlignment="center"
-			  android:text="@string/app_name"/>
+		<TextView android:id="@+id/txt_title"
+				  style="@style/TitleActionBar"
+				  android:layout_width="wrap_content"
+				  android:layout_height="?attr/actionBarSize"
+				  android:layout_gravity="center"
+				  android:layout_marginTop="?attr/actionBarSize"
+				  android:gravity="center_vertical"
+				  android:text="@string/app_name"/>
+	</android.support.v7.widget.Toolbar>
 
 	<View
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/details_app_bar_overlap"
-		android:layout_below="@id/txt_title"
-		android:background="@color/primary"
-		/>
+		android:layout_below="@id/toolbar"
+		android:background="@color/primary"/>
 
 	<!-- We will use a dynamic fragment in container since for vertical layout we do not need
 	 details from the right side-->
 	<FrameLayout android:id="@+id/detail_container"
 				 android:layout_width="match_parent"
 				 android:layout_height="wrap_content"
-				 android:layout_below="@id/txt_title"
+				 android:layout_below="@id/toolbar"
 				 android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
 				 android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
 		/>
